# zi2zi-burn

./: .gitignore  Cargo.toml  README.md  charset.json  config.json
docs/: overview.md
scripts/: generate_charset.py  jp.txt
src/: data.rs  training.rs  utils.rs
src/model/: discriminator.rs  generator.rs  layers.rs  mod.rs
