[package]
name = "zi2zi-burn"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20.0", features = ["cuda", "train", "vision",] }
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.145"
serde-pickle = "1.2.0"
clap = { version = "4.5.48", features = ["derive"] }
image = "0.25.8"
gif = "0.13.3"
glob = "0.3.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
owned_ttf_parser = "0.25.1"
tiny-skia = "0.11.4"
anyhow = "1.0.99"
burn-cuda = "0.20.0"

[features]
default = ["burn/std", "burn/tui", "burn/fusion"]
